--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,29 @@ version: '2'
 
 services:
   serilog:
-    build: . 
+    build: ./serilog
     image: serilog
   consoleapp:
-    image: serilog
+    build: ./console-sample
+    image: serilog-console-sample
     depends_on: 
-      - serilog
+      - serilog 
+    
+    
+    
+    
+    
+    
+    
+#   webapp:
+#     image: microsoft/aspnet
+
+    
+#     FROM microsoft/aspnet
+
+# COPY . /app
+# WORKDIR /app
+# RUN ["dnu", "restore"]
+
+# EXPOSE 5004
+# ENTRYPOINT ["dnx", "-p", "project.json", "kestrel"]
