--- a/serilog/Dockerfile
+++ b/serilog/Dockerfile
@@ -6,11 +6,11 @@ ENV DNX_BRANCH dev
 # Pull Serilog and build
 RUN apt-get update \ 
 	&& apt-get install -y wget curl git \
-	&& git clone https://github.com/serilog/serilog.git \
 	&& apt-get -y autoremove \
 	&& apt-get -y clean \
 	&& rm -rf /var/lib/apt/lists/*
 
-WORKDIR /serilog
-ADD build.sh /serilog/ 
+RUN mkdir /src
+WORKDIR /src
+ADD build.sh /src/ 
 RUN sh build.sh
