--- a/console-sample/src/console/project.json
+++ b/console-sample/src/console/project.json
@@ -1,14 +1,14 @@
 {
+    "version": "1.0.0-*",
+    "compilationOptions": {
+        "emitEntryPoint": true
+    },
+
     "dependencies": {
+        "NETStandard.Library": "1.0.0-rc2-23811"
     },
-    "commands": {
-        "ConsoleApp": "ConsoleApp"
-    },
-    "frameworks": { 
-        "dnxcore50": {
-            "dependencies": {
-                "System.Console": "4.0.0-beta-23516"
-            }
-        }
+
+    "frameworks": {
+        "dnxcore50": { }
     }
 }
