--- a/console-sample/src/console/project.json
+++ b/console-sample/src/console/project.json
@@ -9,6 +9,9 @@
     },
 
     "frameworks": {
-        "dnxcore50": { }
+        "netstandardapp": {
+            "Serilog": "2.0.0-beta-523",
+            "Serilog.Sinks.Console": "2.0.0-beta-700"
+        }
     }
 }
