Change to cmd in compose and path correction.

--- a/console-sample/Dockerfile
+++ b/console-sample/Dockerfile
@@ -5,5 +5,5 @@ COPY entry_point.sh entry_point.sh
 RUN chmod +x /entry_point.sh
 
 ADD src/console /console-sample
-# ENTRYPOINT ["/entry_point.sh"]
-# CMD ["run"]
+ENTRYPOINT ["/entry_point.sh"]
+CMD ["run"]
