Added web and console app to test integration.  Also changes for dotnet core RC2

--- a/web-sample/Dockerfile
+++ b/web-sample/Dockerfile
@@ -1,6 +1,7 @@
-FROM microsoft/dotnet
+FROM microsoft/dotnet 
+
 ADD src /sample
 COPY entry_point.sh entry_point.sh
 RUN chmod +x /entry_point.sh
- 
-ENTRYPOINT ["/entry_point.sh"] 
+EXPOSE 5000
+ENTRYPOINT ["/entry_point.sh"]
