--- a/console-sample/src/project.json
+++ b/console-sample/src/project.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "Serilog.Sinks.Literate": "2.0.0-rc-25",
+    "Serilog.Sinks.Splunk": "2.0.0-rc-88",
     "Serilog.Extensions.Logging": "1.0.0-rc2-10104",
     "System.Collections.Concurrent": "4.0.12-rc2-24027",
     "System.Threading.Tasks": "4.0.11-rc2-24027",
@@ -17,7 +18,7 @@
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.0-rc2-3002702"
+          "version": "1.0.0"
         }
       },
       "imports": [
