--- a/console-sample/src/project.json
+++ b/console-sample/src/project.json
@@ -4,12 +4,13 @@
     "emitEntryPoint": true
   },
   "dependencies": {
-    "Serilog.Sinks.Literate": "2.0.0-rc-25",
-    "Serilog.Sinks.Splunk": "2.0.0-rc-88",
-    "Serilog.Extensions.Logging": "1.0.0-rc2-10104",
-    "System.Collections.Concurrent": "4.0.12-rc2-24027",
-    "System.Threading.Tasks": "4.0.11-rc2-24027",
-    "System.Net.Http": "4.0.1-rc2-24027"
+    "Serilog.Sinks.Literate": "2.0.0",
+    "Serilog.Sinks.Splunk": "2.0.0",
+    "Serilog.Extensions.Logging": "1.0.0",
+    "System.Collections.Concurrent": "4.0.12",
+    "System.Threading.Tasks": "4.0.11",
+    "System.Net.Http": "4.1.0",
+    "Microsoft.Extensions.Logging": "1.0.0"
   },
 
   "frameworks": { 
