--- a/web-sample/src/appsettings.json
+++ b/web-sample/src/appsettings.json
@@ -2,12 +2,24 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebSample-77a6427d-ecc6-4689-9514-5d4315948ee4;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "LiterateConsole" },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341/",
+          "compact": true
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext"]
   }
 }
