--- a/web-sample/src/project.json
+++ b/web-sample/src/project.json
@@ -10,8 +10,9 @@
     },
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
     "Serilog.Extensions.Logging": "1.0.0",
-    "Serilog.Sinks.Seq": "2.0.0",
+    "Serilog.Sinks.Seq": "3.0.1",
     "Serilog.Sinks.Literate": "2.0.0",
+    "Serilog.Settings.Configuration": "2.1.0",
     
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0", 
