--- a/samples.yml
+++ b/samples.yml
@@ -20,4 +20,8 @@ services:
     ports:
       - 8000:8000
       - 8088:8088
+      - 8089:8089
+    environment:
+      SPLUNK_START_ARGS: --accept-license --answer-yes
+      SPLUNK_USER: root
     
