Updates to .Net Core 2
* Update to use Datalust Seq image
* Change to multi-stage builds.

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,8 @@ FakesAssemblies/
 **/*.Server/ModelManifest.xml
 _Pvt_Extensions
 *.orig
+
+.vscode
+
+web-sample/src/out/
+console-sample/src/out/
