--- a/web-sample/Dockerfile
+++ b/web-sample/Dockerfile
@@ -1,7 +1,12 @@
-FROM microsoft/dotnet:1.1.2-sdk
-
+FROM microsoft/dotnet:2.0-sdk AS build
+# FROM microsoft/aspnetcore:2.0.0 AS build
+WORKDIR /sample
 ADD src /sample
-COPY entry_point.sh entry_point.sh
-RUN chmod +x /entry_point.sh
-EXPOSE 5000
-ENTRYPOINT ["/entry_point.sh"]
+RUN dotnet restore
+RUN dotnet publish -c Release -o out
+
+FROM microsoft/dotnet:2.0-runtime AS runtime
+ENV ASPNETCORE_URLS http://*:5000
+WORKDIR /sample
+COPY --from=build /sample/out ./
+ENTRYPOINT ["dotnet", "web-sample.dll"]
