--- a/web-sample/src/appsettings.json
+++ b/web-sample/src/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebSample-77a6427d-ecc6-4689-9514-5d4315948ee4;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -11,11 +8,11 @@
       }
     },
     "WriteTo": [
-      { "Name": "LiterateConsole" },
+      { "Name": "Console" },
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://localhost:5341/",
+          "serverUrl": "http://seq:5341/",
           "compact": true
         }
       }
