--- a/console-sample/src/console-sample.csproj
+++ b/console-sample/src/console-sample.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.1.2" />
     <PackageReference Include="Serilog.Sinks.Splunk" Version="2.5.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.1" />
